[project]
name = "backend"
version = "0.1.0"
description = "AI-powered producer onboarding system backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.23",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "bcrypt>=4.1.2",
    "PyJWT>=2.8.0",
    "requests>=2.31.0",
    "groq>=0.4.1",
    "langgraph>=0.0.26",
    "typing-extensions>=4.8.0"
]
